--- a/backend/package.json
+++ b/backend/package.json
@@ -23,6 +23,7 @@
     "express-validator": "^7.1.0",
     "http-errors": "^2.0.0",
     "jsonwebtoken": "^9.0.2",
+    "moment": "^2.30.1",
     "mongoose": "^7.7.0",
     "morgan": "^1.10.0",
     "nodemon": "^3.1.4"
