--- a/frontend/package.json
+++ b/frontend/package.json
@@ -17,6 +17,7 @@
     "@reduxjs/toolkit": "^2.2.5",
     "axios": "^1.7.2",
     "country-state-city": "^3.2.1",
+    "date-fns": "^4.1.0",
     "js-cookie": "^3.0.5",
     "react": "^18.3.1",
     "react-circular-progressbar": "^2.1.0",
