--- a/frontend/package.json
+++ b/frontend/package.json
@@ -19,6 +19,7 @@
     "country-state-city": "^3.2.1",
     "date-fns": "^4.1.0",
     "js-cookie": "^3.0.5",
+    "pdfjs-dist": "^4.8.69",
     "react": "^18.3.1",
     "react-circular-progressbar": "^2.1.0",
     "react-dom": "^18.3.1",
